--- a/webapp/main/templates/index.html
+++ b/webapp/main/templates/index.html
@@ -61,7 +61,7 @@
     </div>
     <script>
         const canvasHeight = 600;
-        const canvasWidth = 1010;
+        const canvasWidth = 1111;
         const barShape = 20;
         const barThickness = barShape/2;
         var GUIDELINE_OFFSET = 5;
@@ -206,8 +206,9 @@
 
         stage.on("click", (e) => {
             shape = e.target
+            console.log(e.target.attrs.name);
             if (e.target.attrs.name === "bar" || e.target.attrs.name === "support" || e.target.attrs.name === "force" 
-            || e.target.attrs.name === "line" || e.target.attrs.name === "slidingSupport" || e.target.attrs.name === "connectingRod"){
+            || e.target.attrs.name === "line" || e.target.attrs.name === "slidingSupport"){
                 tr = new Konva.Transformer({
                     nodes: [e.target],
                     name: e.target.attrs.name,
@@ -227,6 +228,17 @@
                     anchorFill: 'lightblue',
                     anchorSize: 10,
                     enabledAnchors: ['top-center', 'bottom-center'],
+                });
+                layer.add(tr);
+                transformers.push(tr);
+            }
+            else if (e.target.attrs.name === "circle1" || e.target.attrs.name === "circle2"){
+                tr = new Konva.Transformer({
+                    nodes: [e.target],
+                    name: e.target.attrs.name,
+                    anchorStroke: 'red',
+                    anchorFill: 'lightblue',
+                    anchorSize: 10,
                 });
                 layer.add(tr);
                 transformers.push(tr);
@@ -351,7 +363,6 @@
 
               layer.add(support).batchDraw();
         }
-        //in progress
         function slidingSupportShape(){
             const embedmentShape = 15;
             const embedmentThickness = barShape/2;
@@ -438,22 +449,50 @@
         }
 
         function connectingRodShape(){
-            const embedmentShape = 15;
-            const embedmentThickness = barShape/2;
-            var connectingRod = new Konva.RegularPolygon({
-                name: "connectingRod",
-                x: stage.getPointerPosition().x - embedmentThickness,
-                y: stage.getPointerPosition().y - embedmentThickness,
-                sides: 3,
-                radius: 15,
-                fill: '#d5d4d3',
+            var line1 = new Konva.Rect({
+                name: "line",
+                x: 22,
+                y: 20,
+                width: 45,
+                height: 1,
+                fill: "grey",
+                stroke: "black",
+                strokeWidth: 1,
+                strokeScaleEnabled: false, 
+              });
+
+            var circle1 = new Konva.Circle({
+                name: "circle1",
+                x: 20,
+                y: 20,
+                radius: 6,
                 stroke: 'black',
                 strokeWidth: 2,
-                draggable: true,
                 strokeScaleEnabled: false,
               });
 
-              layer.add(connectingRod).batchDraw();
+            var circle2 = new Konva.Circle({
+                name: "circle2",
+                x: 70,
+                y: 20,
+                radius: 6,
+                stroke: 'black',
+                strokeWidth: 2,
+                strokeScaleEnabled: false,
+              });
+            
+              var group = new Konva.Group({
+                name: "group",
+                x: stage.getPointerPosition().x,
+                y: stage.getPointerPosition().y,
+                draggable: true,
+              });
+
+              layer.add(group);
+              group.add(line1);
+              group.add(circle1);
+              group.add(circle2);
+              layer.batchDraw();
         }
 
 
