--- a/webapp/main/templates/index.html
+++ b/webapp/main/templates/index.html
@@ -53,7 +53,6 @@
         <button id="addBallJoint-button">Add Ball Joint</button>
         <button id="addConnectingRod-button">Add Connecting Rod</button>
         <button id="addEmbedment-button">Add Embedment</button>
-        <button id="addText-button">Add Text</button>
         <button id="addLine-button">Add Line</button>
         <button id="addForce-button">Add Force</button>
         <button id="delete-button">Delete Object</button>
@@ -136,10 +135,6 @@
             ballJointShape();
         });
 
-        document.getElementById('addText-button').addEventListener('click', () => {
-            textShape();
-        });
-
         document.getElementById('addLine-button').addEventListener('click', () => {
             lineShape();
         });
@@ -206,7 +201,7 @@
 
         stage.on("click", (e) => {
             shape = e.target
-            console.log(e.target.attrs.name);
+            console.log(e.target.parent);
             if (e.target.attrs.name === "bar" || e.target.attrs.name === "support" || e.target.attrs.name === "force" 
             || e.target.attrs.name === "line" || e.target.attrs.name === "slidingSupport"){
                 tr = new Konva.Transformer({
@@ -234,35 +229,12 @@
             }
             else if (e.target.attrs.name === "circle1" || e.target.attrs.name === "circle2"){
                 tr = new Konva.Transformer({
-                    nodes: [e.target],
-                    name: e.target.attrs.name,
+                    nodes: [e.target.parent],
+                    name: "group",
                     anchorStroke: 'red',
                     anchorFill: 'lightblue',
                     anchorSize: 10,
-                });
-                layer.add(tr);
-                transformers.push(tr);
-            }
-            else if (e.target.attrs.name === "text"){
-                tr = new Konva.Transformer({
-                    nodes: [e.target],
-                    name: e.target.attrs.name,
-                    anchorStroke: 'red',
-                    anchorFill: 'lightblue',
-                    anchorSize: 10,
-                    enabledAnchors: ['middle-left', 'middle-right'],
-                    boundBoxFunc: function (oldBox, newBox) {
-                        newBox.width = Math.max(30, newBox.width);
-                        return newBox;
-                    },
-                });
-
-                textNode.on('transform', function () {
-                    // reset scale, so only with is changing by transformer
-                    textNode.setAttrs({
-                        width: textNode.width() * textNode.scaleX(),
-                        scaleX: 1,
-                    });
+                    enabledAnchors: [],
                 });
                 layer.add(tr);
                 transformers.push(tr);
@@ -416,41 +388,68 @@
         }
 
         function lineShape(){
+            var group = new Konva.Group({
+                draggable: true,
+            });
+
             var line = new Konva.Rect({
                 name: "line",
                 x: stage.getPointerPosition().x,
                 y: stage.getPointerPosition().y,
                 width: 70,
-                height: 1,
+                height: 2,
                 fill: "grey",
                 stroke: "black",
-                strokeWidth: 1,
-                draggable: true,
                 strokeScaleEnabled: false,
-                
               });
-        
-              // add the triangle shape to the layer
-              layer.add(line).batchDraw();
-        }
+            
 
-        function textShape(){
-            var text = new Konva.Text({
-                name: "text",
-                text: 'enter text',
-                x: stage.getPointerPosition().x,
-                y: stage.getPointerPosition().y,
+            var textNode = new Konva.Text({
+                name: "forceText",
+                text: 'Write the force applied',
+                x: stage.getPointerPosition().x - 40,
+                y: stage.getPointerPosition().y - 20,
                 fontSize: 20,
                 draggable: true,
-                width: 200,
             });
 
-            layer.add(text).batchDraw();
+            textNode.on('dblclick dbltap', () => {
+                var textPosition = textNode.getAbsolutePosition();
+        
+                var stageBox = stage.container().getBoundingClientRect();
+        
+                var areaPosition = {
+                    x: stageBox.left + textPosition.x,
+                    y: stageBox.top + textPosition.y,
+                };
+        
+                var textarea = document.createElement('textarea');
+                document.body.appendChild(textarea);
+        
+                textarea.value = textNode.text();
+                textarea.style.position = 'absolute';
+                textarea.style.top = areaPosition.y + 'px';
+                textarea.style.left = areaPosition.x + 'px';
+                textarea.style.width = textNode.width();
+        
+                textarea.focus();
+        
+                textarea.addEventListener('keydown', function (e) {
+                    if (e.keyCode === 13) {
+                    textNode.text(textarea.value);
+                    document.body.removeChild(textarea);
+                    }
+                });
+            });
+
+            group.add(line);
+            group.add(textNode);
+            layer.add(group).batchDraw();
         }
 
         function connectingRodShape(){
             var line1 = new Konva.Rect({
-                name: "line",
+                name: "line1",
                 x: 22,
                 y: 20,
                 width: 45,
@@ -458,7 +457,8 @@
                 fill: "grey",
                 stroke: "black",
                 strokeWidth: 1,
-                strokeScaleEnabled: false, 
+                strokeScaleEnabled: false,
+                draggable: false,
               });
 
             var circle1 = new Konva.Circle({
@@ -469,6 +469,7 @@
                 stroke: 'black',
                 strokeWidth: 2,
                 strokeScaleEnabled: false,
+                draggable: false,
               });
 
             var circle2 = new Konva.Circle({
@@ -479,26 +480,39 @@
                 stroke: 'black',
                 strokeWidth: 2,
                 strokeScaleEnabled: false,
+                draggable: false,
               });
             
-              var group = new Konva.Group({
+            var group = new Konva.Group({
                 name: "group",
                 x: stage.getPointerPosition().x,
                 y: stage.getPointerPosition().y,
                 draggable: true,
-              });
+                listening: true,
+                rotation: 90,
+            });
 
-              layer.add(group);
-              group.add(line1);
-              group.add(circle1);
-              group.add(circle2);
-              layer.batchDraw();
+            layer.add(group);
+            group.add(line1);
+            group.add(circle1);
+            group.add(circle2);
+            group.moveToTop();
+            group.cache({
+                drawBorder: true,
+            })
+            layer.batchDraw();
         }
 
 
         function forceShape(){
             var width = 50;
             var height = 50;
+
+            var group = new Konva.Group({
+                name: "forceGroup",
+                draggable: true,
+            });
+
             var force = new Konva.Arrow({
                 name: "force",
                 rotation: 45,
@@ -510,12 +524,50 @@
                 fill: '#13861f',
                 stroke: '#13861f',
                 strokeWidth: 10,
-                draggable: true,
                 strokeScaleEnabled: false,
               });
+              
+            var textNode = new Konva.Text({
+                name: "forceText",
+                text: 'Write the force applied',
+                x: stage.getPointerPosition().x - 40,
+                y: stage.getPointerPosition().y - 20,
+                fontSize: 20,
+                draggable: true,
+            });
+
+            textNode.on('dblclick dbltap', () => {
+                var textPosition = textNode.getAbsolutePosition();
         
-              // add the shape to the layer
-              layer.add(force).batchDraw();
+                var stageBox = stage.container().getBoundingClientRect();
+        
+                var areaPosition = {
+                    x: stageBox.left + textPosition.x,
+                    y: stageBox.top + textPosition.y,
+                };
+        
+                var textarea = document.createElement('textarea');
+                document.body.appendChild(textarea);
+        
+                textarea.value = textNode.text();
+                textarea.style.position = 'absolute';
+                textarea.style.top = areaPosition.y + 'px';
+                textarea.style.left = areaPosition.x + 'px';
+                textarea.style.width = textNode.width();
+        
+                textarea.focus();
+        
+                textarea.addEventListener('keydown', function (e) {
+                    if (e.keyCode === 13) {
+                    textNode.text(textarea.value);
+                    document.body.removeChild(textarea);
+                    }
+                });
+            });
+
+            group.add(force);
+            group.add(textNode);
+            layer.add(group).batchDraw();
         }
 
 
