--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -80,8 +80,6 @@
         function drawLinesSolution1(layer){      
             var gridLayer = new Konva.Layer();
             var padding = blockSnapSize;
-            console.log(width, padding, width / padding);
-            console.log("Drawing.")
             for (var i = 0; i < width / padding; i++) {
             gridLayer.add(new Konva.Line({
                 points: [Math.round(i * padding) + 0.5, 0, Math.round(i * padding) + 0.5, height],
@@ -202,8 +200,7 @@
         let isDrawing = false;
 
         stage.on("click", (e) => {
-            shape = e.target
-            console.log(e.target.parent);
+            shape = e.target;
             if (e.target.attrs.name === "bar" || e.target.attrs.name === "support" || e.target.attrs.name === "force" 
             || e.target.attrs.name === "line" || e.target.attrs.name === "slidingSupport"){
                 tr = new Konva.Transformer({
@@ -216,6 +213,7 @@
                 });
                 layer.add(tr);
                 transformers.push(tr);
+                shapes.push(e.target);
             }
             else if (e.target.attrs.name === "embedment"){
                 tr = new Konva.Transformer({
@@ -228,10 +226,11 @@
                 });
                 layer.add(tr);
                 transformers.push(tr);
+                shapes.push(e.target);
             }
             else if (e.target.attrs.name === "circle1" || e.target.attrs.name === "circle2"){
                 tr = new Konva.Transformer({
-                    nodes: [e.target.parent],
+                    nodes: [e.target],
                     name: "group",
                     anchorStroke: 'red',
                     anchorFill: 'lightblue',
@@ -240,11 +239,14 @@
                 });
                 layer.add(tr);
                 transformers.push(tr);
+                shapes.push(e.target);
             }
             else {
                 transformers.forEach(function (t){
-                t.destroy();
-            })
+                    t.destroy();
+                })
+                transformers = []
+                shapes = []
             }
         });
 
@@ -305,8 +307,8 @@
                 shadowMove(e);
             });
         
-              // add the triangle shape to the layer
-              layer.add(embedment).batchDraw();
+            // add the triangle shape to the layer
+            layer.add(embedment).batchDraw();
         }
 
         function supportShape(){
@@ -334,7 +336,7 @@
                 shadowMove(e);
             });
 
-              layer.add(support).batchDraw();
+            layer.add(support).batchDraw();
         }
         function slidingSupportShape(){
             const embedmentShape = 15;
@@ -631,6 +633,25 @@
             
             angle = angle + 10;
         }
+        container = stage.container();
+        container.tabIndex = 1;
+        // focus it
+        // also stage will be in focus on its click
+        container.focus();
+
+      const DELTA = 4;
+        container.addEventListener('keydown', (e) => {
+            console.log(e.key);
+            if (e.key === "Backspace" || e.key === 'Delete'){
+                e.preventDefault()
+                for(var i = 0; i < shapes.length; i++){
+                    transformers[i].destroy();
+                    shapes[i].destroy();
+                }
+                transformers = []
+                shapes = []
+            }
+        });
     </script>
   </body>
 {% endblock %}
