--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -32,6 +32,9 @@
                 margin-left: 160px;
                 padding: 0px 10px;
             }
+            .scrollable {
+                overflow-y: scroll;
+            }
         </style>
 
         <meta charset="utf-8">
@@ -58,7 +61,7 @@
         
         <div id="content" name="content" class="main">
             <div class="row justify-content-center">
-                <div class="col-8">
+                <div class="col-8 ">
                     <h1 class="mt-2">ITS Estatica</h1>
                     <hr class="mt-0 mb-4">
                     {% block content %}
