--- a/main/templates/tasks.html
+++ b/main/templates/tasks.html
@@ -65,7 +65,7 @@
     <td>cell1_1</td>
     <td>cell2_1</td>
     <td>cell3_1</td>
-    <td><button class="button button">Edit</button></td>
+    <td><a class="button button" href="{% url 'dcl'%}">Edit</a></td>
     </tr>
     <tr>
     <td>cell1_2</td>
