--- a/main/templates/tasks.html
+++ b/main/templates/tasks.html
@@ -55,36 +55,25 @@
     <thead>
     <tr>
     <th>Nombre</th>
-    <th>Dificultad</th>
-    <th>head3</th>
+    <th>Stage</th>
     <th></th>
     </tr>
     </thead>
     <tbody>
-    <tr>
-    <td>cell1_1</td>
-    <td>cell2_1</td>
-    <td>cell3_1</td>
-    <td><a class="button button" href="{% url 'dcl'%}">Edit</a></td>
-    </tr>
-    <tr>
-    <td>cell1_2</td>
-    <td>cell2_2</td>
-    <td>cell3_2</td>
-    <td>cell4_2</td>
-    </tr>
-    <tr>
-    <td>cell1_3</td>
-    <td>cell2_3</td>
-    <td>cell3_3</td>
-    <td>cell4_3</td>
-    </tr>
-    <tr>
-    <td>cell1_4</td>
-    <td>cell2_4</td>
-    <td>cell3_4</td>
-    <td>cell4_4</td>
-    </tr>
+    {% for task in task_list %}
+        <tr>
+            <td>
+                {{task.name}}
+            </td>
+            <td style="word-wrap: break-word;
+            max-width: 150px;">
+                {{task.stage}}
+            </td>
+            <td>
+                <a class="button button" href="{% url 'dcl'%}">Edit</a>
+            </td>
+        </tr>
+    {% endfor %}
     </tbody>
     </table>
 
