Moved Saving functions to base html.

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -126,10 +126,41 @@
                         }
                     }
                 }
-                
             }
-            
 
+            // Function to convert stage to string, also send it to the Form text to be saved in DB
+            function getStageAsStr(){
+                // json = stage.toJSON().substr(6372)
+                // json = json.substr(0, json.length-3)
+                // document.getElementById("stageInput").value = json
+                var str = ""
+                for(var i = 0; i < existingShapes.length; i++){
+                    str += objectToString(existingShapes[i])
+                }
+                document.getElementById("stageInput").value = str
+                return str
+            }
+
+            function objectToString(object){
+                var  string = '{'
+                string += '"name": ' + object.name()
+                string += ', '
+                if (object.name() === "forceGroup"){
+                    string += '"force": ' + object.children[1].text()
+                    string += ', '
+                }
+                string += '"x": ' + object.x()
+                string += ', '
+                string += '"y": ' + object.y()
+                string += ', '
+                string += '"rotation": ' + object.rotation()
+                string += '};'
+                return string
+            }
+
+            function getStageAsList(){
+                return JSON.parse(getStageAsStr);
+            }
         </script>
     </body>
 </html>
